# kibo-script

./: .gitignore  CHEATSHEET.md  README.md  STATUS.md  draft.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: bytecode-transfer-design.md  kibo-device-protocol-roadmap.md  pico-bringup.md  pico-final-soak-and-resource-gate.md  pico-flash-persistence-gate.md  pico-flash-persistence-implementation-notes.md  pico-loader-protocol-gates.md  pico-runtime-risk-burn-down-summary.md  pico-semantics-probe-suite.md  pico-simulator-to-pico-ux-audit.md  runtime-conformance.md  runtime-pico-handoff.md  simulator-editor-code-mirror-phase-two.md
examples/pico-runtime-samples/: button-led-toggle.sc  button-mode-dashboard.sc  circle-sweep.sc  countdown-marquee.sc  growing-circle.sc  led-heartbeat.sc  looped-pulse-train.sc  pwm-servo-light-show.sc  radio-state-tuner.sc  rover-scan-sweep.sc  samples.json  serial-heartbeat-log.sc  (+5 more)
runtime/cpp/: CMakeLists.txt  README.md
runtime/cpp/include/: kibo_base64_decode.hpp  kibo_crc32.hpp  kibo_device_protocol_v1.hpp  kibo_display_geometry.hpp  kibo_display_glcd_text.hpp  kibo_fnv1a64.hpp  kibo_glcdfont_5x7_columns.hpp  kibo_host_runtime.hpp  kibo_json_read_integer.hpp  kibo_pico_runtime_package_storage_limits.hpp  kibo_runtime_replay_runner.hpp
runtime/cpp/src/: kibo_host_runtime.cpp  kibo_runtime_replay_main.cpp  kibo_runtime_replay_runner.cpp
scripts/: generate-kibo-glcdfont-hpp.mjs  regenerate-compiler-goldens.ts
src/: main.ts  vite-env.d.ts
(+318 files in other folders)
